// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <header
    className="padded huge-spacer-top display-flex-column display-flex-center"
  >
    <div
      className="abs-width-800 huge-spacer-bottom"
    >
      <h1
        className="text-center big-spacer-bottom"
      >
        onboarding.create_project.select_method
      </h1>
      <p
        className="text-center spacer-bottom"
      >
        onboarding.create_project.select_method.description1
      </p>
      <p
        className="text-center"
      >
        onboarding.create_project.select_method.description2
      </p>
    </div>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-justify-center"
  >
    <button
      className="button button-huge big-spacer-right display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <ChevronsIcon
        size={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <div
      className="display-flex-column"
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/azure.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.azure
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.alm_not_configured
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/bitbucket.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.bitbucket
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/github.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.github
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.alm_not_configured
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/gitlab.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.gitlab
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.alm_not_configured
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: invalid configs, admin 1`] = `
<Fragment>
  <header
    className="padded huge-spacer-top display-flex-column display-flex-center"
  >
    <div
      className="abs-width-800 huge-spacer-bottom"
    >
      <h1
        className="text-center big-spacer-bottom"
      >
        onboarding.create_project.select_method
      </h1>
      <p
        className="text-center spacer-bottom"
      >
        onboarding.create_project.select_method.description1
      </p>
      <p
        className="text-center"
      >
        onboarding.create_project.select_method.description2
      </p>
    </div>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-justify-center"
  >
    <button
      className="button button-huge big-spacer-right display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <ChevronsIcon
        size={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <div
      className="display-flex-column"
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/azure.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.azure
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/bitbucket.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.bitbucket
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/github.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.github
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.too_many_alm_instances_X.alm.github
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/gitlab.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.gitlab
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: invalid configs, admin 2`] = `
<Fragment>
  <header
    className="padded huge-spacer-top display-flex-column display-flex-center"
  >
    <div
      className="abs-width-800 huge-spacer-bottom"
    >
      <h1
        className="text-center big-spacer-bottom"
      >
        onboarding.create_project.select_method
      </h1>
      <p
        className="text-center spacer-bottom"
      >
        onboarding.create_project.select_method.description1
      </p>
      <p
        className="text-center"
      >
        onboarding.create_project.select_method.description2
      </p>
    </div>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-justify-center"
  >
    <button
      className="button button-huge big-spacer-right display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <ChevronsIcon
        size={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <div
      className="display-flex-column"
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/azure.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.azure
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/bitbucket.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.bitbucket
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/github.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.github
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.too_many_alm_instances_X.alm.github
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/gitlab.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.gitlab
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: invalid configs, not admin 1`] = `
<Fragment>
  <header
    className="padded huge-spacer-top display-flex-column display-flex-center"
  >
    <div
      className="abs-width-800 huge-spacer-bottom"
    >
      <h1
        className="text-center big-spacer-bottom"
      >
        onboarding.create_project.select_method
      </h1>
      <p
        className="text-center spacer-bottom"
      >
        onboarding.create_project.select_method.description1
      </p>
      <p
        className="text-center"
      >
        onboarding.create_project.select_method.description2
      </p>
    </div>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-justify-center"
  >
    <button
      className="button button-huge big-spacer-right display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <ChevronsIcon
        size={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <div
      className="display-flex-column"
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/azure.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.azure
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.alm_not_configured
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/bitbucket.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.bitbucket
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.alm_not_configured
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/github.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.github
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.too_many_alm_instances_X.alm.github
            </p>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/gitlab.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.gitlab
            </div>
            <p
              className="text-muted small spacer-top"
              style={
                Object {
                  "lineHeight": 1.5,
                }
              }
            >
              onboarding.create_project.alm_not_configured
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: loading instances 1`] = `
<Fragment>
  <header
    className="padded huge-spacer-top display-flex-column display-flex-center"
  >
    <div
      className="abs-width-800 huge-spacer-bottom"
    >
      <h1
        className="text-center big-spacer-bottom"
      >
        onboarding.create_project.select_method
      </h1>
      <p
        className="text-center spacer-bottom"
      >
        onboarding.create_project.select_method.description1
      </p>
      <p
        className="text-center"
      >
        onboarding.create_project.select_method.description2
      </p>
    </div>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-justify-center"
  >
    <button
      className="button button-huge big-spacer-right display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <ChevronsIcon
        size={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <div
      className="display-flex-column"
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/azure.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.azure
            </div>
            <span>
              onboarding.create_project.check_alm_supported
              <i
                className="little-spacer-left spinner"
              />
            </span>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/bitbucket.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.bitbucket
            </div>
            <span>
              onboarding.create_project.check_alm_supported
              <i
                className="little-spacer-left spinner"
              />
            </span>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/github.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.github
            </div>
            <span>
              onboarding.create_project.check_alm_supported
              <i
                className="little-spacer-left spinner"
              />
            </span>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/gitlab.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.gitlab
            </div>
            <span>
              onboarding.create_project.check_alm_supported
              <i
                className="little-spacer-left spinner"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: no alm conf yet, admin 1`] = `
<Fragment>
  <header
    className="padded huge-spacer-top display-flex-column display-flex-center"
  >
    <div
      className="abs-width-800 huge-spacer-bottom"
    >
      <h1
        className="text-center big-spacer-bottom"
      >
        onboarding.create_project.select_method
      </h1>
      <p
        className="text-center spacer-bottom"
      >
        onboarding.create_project.select_method.description1
      </p>
      <p
        className="text-center"
      >
        onboarding.create_project.select_method.description2
      </p>
    </div>
  </header>
  <div
    className="create-project-modes huge-spacer-top display-flex-justify-center"
  >
    <button
      className="button button-huge big-spacer-right display-flex-column create-project-mode-type-manual"
      onClick={[Function]}
      type="button"
    >
      <ChevronsIcon
        size={80}
      />
      <div
        className="medium big-spacer-top"
      >
        onboarding.create_project.select_method.manual
      </div>
    </button>
    <div
      className="display-flex-column"
    >
      <div
        className="display-flex-center display-flex-space-between"
      >
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/azure.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.azure
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/bitbucket.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.bitbucket
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/github.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.github
            </div>
          </button>
        </div>
        <div
          className="display-flex-column"
        >
          <button
            className="button button-huge display-flex-column create-project-mode-type-alm"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              height={80}
              src="/images/alm/gitlab.svg"
            />
            <div
              className="medium big-spacer-top abs-height-50 display-flex-center"
            >
              onboarding.create_project.select_method.gitlab
            </div>
          </button>
        </div>
      </div>
      <Alert
        className="big-spacer-top"
        variant="info"
      >
        onboarding.create_project.select_method.no_alm_yet.admin
      </Alert>
    </div>
  </div>
</Fragment>
`;
